--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@huggingface/inference": "^4.13.12",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.34.2",
     "lucide-react": "^0.574.0",
     "next": "16.1.6",
     "react": "19.2.3",
