--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,9 @@ jobs:
       
     - name: Run Lint
       run: npm run lint
+
+    - name: Run Tests
+      run: npm test
       
     - name: Build
       run: npm run build
